--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cheerio": "^1.1.2",
     "awesome-phonenumber": "^2.64.0",
     "pino": "^8.1.0",
+    "archiver" "^7.0.1",
     "phone": "3.1.30",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
