--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "dependencies": {
     "@whiskeysockets/baileys": "latest",
     "@adiwajshing/keyed-db": "^0.2.4",
-        "jimp":"^1.6.0",
+    "jimp": "^1.6.0",
     "qrcode": "^1.5.3",
-   "@octokit/rest": "^20.1.1",
+    "@octokit/rest": "^20.1.1",
     "cheerio": "^1.1.2",
     "awesome-phonenumber": "^2.64.0",
     "pino": "^8.1.0",
-    "archiver" "^7.0.1",
+    "archiver": "^7.0.1",
     "phone": "3.1.30",
     "body-parser": "^1.20.1",
     "express": "^4.18.1",
